--- a/style.css
+++ b/style.css
@@ -11,3 +11,42 @@
     background-size: cover;
     background-position: center;
 }
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 45px;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+.BigButton{
+    color: burlywood;
+    font-size: 50px;
+    letter-spacing: 2px;
+    cursor: pointer;
+}
+span{
+    color: aqua;
+}
+nav ul li{
+    display: inline-block;
+    padding: 10px 35px;
+}
+nav ul li a{
+    color: aqua;
+    text-decoration: none;
+    font-weight: bold;
+}
+nav ul li a:hover{
+    color: yellow;
+    transition: .5s;
+}
+.follow{
+    background-color: #f9004d;
+    color: white;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 10px 35px;
+    border-radius: 30px;
+}
