--- a/style.css
+++ b/style.css
@@ -50,3 +50,18 @@ nav ul li a:hover{
     padding: 10px 35px;
     border-radius: 30px;
 }
+.introduction{
+    position: absolute;
+    top: 50%;
+    left: 5%;
+}
+h1{
+    color:aqua;
+    margin: 25px 0px 25px;
+    font-size: 60px;
+}
+h2{
+    color: burlywood;
+    font-size: 20px;
+    margin-bottom: 50px;
+}
