--- a/style.css
+++ b/style.css
@@ -54,6 +54,20 @@ nav ul li a:hover{
     position: absolute;
     top: 40%;
     left: 5%;
+    right: 0%;
+}
+.introduction a{
+    color: black;
+    background-color: white;
+    padding: 20px 40px;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    margin: 10px 20px;
+    border-radius: 30px;
+    position: absolute;
+    top: 50px;
+    right: 40px;
 }
 h1{
     color:rgb(255, 255, 255);
