--- a/style.css
+++ b/style.css
@@ -142,30 +142,32 @@ h1{
 .Skills img{
     height: 420px;
     width: 600px;
+    margin-left: 20px;
 }
-.grandmaster{
-    width: 100%;
-    background-color: rgb(14, 14, 14);
-    position: relative;
-}
-.grandmaster2 img{
-    height: 420px;
-    width: 800px;
-}
-.Looks p{
+.skills-text p{
     color: white;
-    font-weight: bold;
-    margin-bottom: 20px;
+    margin-left: 20px;
 }
-.Looks h3{
+.skills-text h3{
     color: aqua;
     font-size: 60px;
     text-transform: capitalize;
     margin-bottom: 20px;
+    margin-left: 20px;
 }
-.Looks h4{
+.skills-text h4{
     color: rgb(233, 243, 51);
     font-size: 20px;
     text-transform: capitalize;
     margin-bottom: 10px;
+    margin-left: 20px;
+}
+.Punches{
+    width: 100%;
+    background-color: rgb(14, 14, 14);
+}
+.grandmaster2 img{
+    height: 420px;
+    width: 800px;
+    margin-left: 18%;
 }
