--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+/*font family will be the default font for text in my website unless I specify otherwise for each section.
+Box-sizing lets me include the padding and border within the width and height of the box
+The * symbol is a universal selector*/
 *{
     padding: 0;
     margin: 0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
 }
+/*This is the background image having the full height of the section and using cover to make sure it covers
+the entire container plus centered to make it look good at the  center.*/
 .sugarNSpice{
     height: 100vh;
     width: 100%;
@@ -11,6 +16,8 @@
     background-size: cover;
     background-position: center;
 }
+/*flex allows for the items to be flexible, they are aligned at the center of website, with space between them and
+a padding allow them to be a certain distance from the top n between each other*/
 nav{
     display: flex;
     align-items: center;
@@ -19,28 +26,40 @@ nav{
     padding-left: 5%;
     padding-right: 5%;
 }
+/*I decided to give the portfolio name a nice sea element as I love the powerful oceans, the cursor property will
+change the cursor to a pointer hand when the user hovers there.*/
 .BigButton{
     color: burlywood;
     font-size: 50px;
     letter-spacing: 2px;
     cursor: pointer;
 }
+/*span let me customize my portfolio name so that I could give it a nice aqua feel with the name Port which emphasizes
+my love for the oceans*/
 span{
     color: aqua;
 }
+/*I used a descendant selector for this css. Its simple n works great, inline block I read helps create navigation links*/
 nav ul li{
     display: inline-block;
     padding: 10px 35px;
 }
+/*font-weight is great for thickening the text. Works a lot like microsoft word
+text-decoration to none is useful as it removes that custom blue & underline from my links
+ so I can have my own decorations*/
 nav ul li a{
     color: aqua;
     text-decoration: none;
     font-weight: bold;
 }
+/*I set transitions to .5s which is a 0.5 milliseconds to the point where the text changes from aqua to yellow
+when a user hovers around the link*/
 nav ul li a:hover{
     color: yellow;
     transition: .5s;
 }
+/*border-radius lets me cut out the box shape of my border and makes a nice radius around the element to give it that
+flattened circle shape*/
 .follow{
     background-color: #f9004d;
     color: rgb(255, 255, 255);
@@ -50,12 +69,15 @@ nav ul li a:hover{
     padding: 10px 35px;
     border-radius: 30px;
 }
+/*position: absolute is something i've been playing with to move elements within the container and entire website
+but am still struggling to get the same results when using images vs text or links*/
 .introduction{
     position: absolute;
     top: 40%;
     left: 5%;
     right: 0%;
 }
+/*padding is that background that surrounds my text or links*/
 .introduction a{
     color: black;
     background-color: white;
@@ -69,6 +91,7 @@ nav ul li a:hover{
     top: 50px;
     right: 40px;
 }
+/*font-size in css is changed with pixels it will occupy on the website or container(section)*/
 h1{
     color:rgb(255, 255, 255);
     margin: 20px 0px 20px;
@@ -86,7 +109,8 @@ h1{
 .The-text{
     width: 500px;
 }
-.main{
+/*space-around lets my elements have a space before, between and after them*/
+.About3{
     width: 1200px;
     max-width: 95%;
     margin: 0 auto;
@@ -94,6 +118,7 @@ h1{
     align-items: center;
     justify-content: space-around;
 }
+/*text-transform: capitalize lets me capitalize the first letter of the word*/
 .The-text h3{
     color: aqua;
     font-size: 75px;
@@ -139,6 +164,8 @@ h1{
     background-color: rgb(14, 14, 14);
     right:10px;
 }
+/*margin-left places a invisible margin from the left that lets me push the content further away from the left margin
+of the container or website. Whether with pixels or percentage like I did with my grandmaster image*/
 .Skills img{
     height: 420px;
     width: 600px;
